--- a/index.html
+++ b/index.html
@@ -4,10 +4,226 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>권다은 포트폴리오</title>
+        <!-- 웹연결 -->
+        <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap" rel="stylesheet">
+        <!--플러그인 필수 css cdn 연결-->
+        <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css">
+        <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
+        <!--플러그인 필수 JS cdn 연결-->
+        <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
+        <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <link rel="stylesheet" href="./styles/reset.css">
     <link rel="stylesheet" href="./styles/index.css">
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <a href="#home">Home</a>
+            <a href="#about_me">About Me</a>
+            <a href="#web_projects">Web-Projects</a>
+            <a href="#design">Design</a>
+        </nav>
+    </header>
+    <div class="swiper" id="wrap">
+        <!--필수-->
+        <div class="swiper-wrapper">
+            <div class="swiper-slide slide" id="home">
+                <P>Da eun Kwon</P>
+                <p class="job">WebPublisher</p>
+                <p class="job">WebDeblisher</p>
+                <h1>PORTFOLIO</h1>
+                <p>2025</p>
+            </div>
+            <div class="swiper-slide slide" id="about_me">
+                <h2>about me</h2>
+                <div class="about_me_left">
+                    <p>끊임없이 노력하고 진화하는<br><em>웹퍼블리셔 권다은</em> 입니다.</p>
+                    <div class="profile">
+                        <h3>Profile</h3>
+                        <p><em>권다은</em> Daeun Kwon</p>
+                        <p>1995.05.29</p>
+                        <p>인천광역시 서구 거주</p>
+                        <div class="line">
+                            <p><em>e-Mail</em></p>
+                            <p>3v3r.alp@gmail.com</p>
+                        </div>
+                        <div class="line">
+                            <p><em>phone</em></p>
+                            <p>010-2385-4899</p>
+                        </div>
+                        <div class="line">
+                            <p><em>gitHub</em></p>
+                            <p>https://github.com/podo529</p>
+                        </div>
+                    </div>
+                    <div class="education">
+                        <h3>Education</h3>
+                        <div class="line">
+                            <p><em>uI/UX 프론트엔드 반응형 웹디자인&웹퍼블리셔 양성과정 수료예정</em></p>
+                            <p>2025.02 ~ 2025.08</p>
+                        </div>
+                        <div class="line">
+                            <p><em>명지전문대학 세무회계과 졸업</em></p>
+                            <p>2019.03 ~ 2021.02</p>
+                        </div>
+                        <div class="line">
+                            <p><em>서정대학교 영유아보육과 졸업</em></p>
+                            <p>2014.03 ~ 2014.02</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="about_me_right">
+                    <div class="skill">
+                        <h3>Skill</h3>
+                        <div class="line">
+                            <p><em></em></p>
+                            <p></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="swiper-slide slide" id="web_projects">
+                <div class="container">
+                    <div class="swiper" id="project_swiper">
+                        <!--필수-->
+                        <h2>Web-Projects</h2>
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide slide1">
+                                <div class="left">
+                                    <div class="thumnail"><img src="" alt=""></div>
+                                </div>
+                                <div class="right">
+                                    <div class="title">
+                                        <h3>안다르</h3>
+                                        <p>반응형 구현</p>
+                                    </div>
+                                    <div class="program">
+                                        <span>Figma</span>
+                                        <span>HTML</span>
+                                        <span>CSS 3</span>
+                                        <span>Javascript</span>
+                                    </div>
+                                    <div class="period">
+                                        <div class="left">
+                                            <p>작업기간</p>
+                                            <p>작업페이지</p>
+                                        </div>
+                                        <div class="right">
+                                            <p>2days</p>
+                                            <p>메인페이지</p>
+                                        </div>
+                                    </div>
+                                    <div class="site">
+                                        <a href="#" target="_blank">re design site<img src="" alt=""></a>
+                                        <a href="#" target="_blank">wire frame / prototype<img src="" alt=""></a>
+                                        <a href="#" target="_blank">original site<img src="" alt=""></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="swiper-slide slide2">
+                                <div class="left">
+                                    <div class="thumnail"><img src="" alt=""></div>
+                                </div>
+                                <div class="right">
+                                    <div class="title">
+                                        <h3>코텍</h3>
+                                        <p>반응형 구현</p>
+                                    </div>
+                                    <div class="program">
+                                        <span>Figma</span>
+                                        <span>HTML</span>
+                                        <span>CSS 3</span>
+                                        <span>Javascript</span>
+                                    </div>
+                                    <div class="period">
+                                        <div class="left">
+                                            <p>작업기간</p>
+                                            <p>작업페이지</p>
+                                        </div>
+                                        <div class="right">
+                                            <p>2days</p>
+                                            <p>메인페이지</p>
+                                        </div>
+                                    </div>
+                                    <div class="site">
+                                        <a href="#" target="_blank">re design site<img src="" alt=""></a>
+                                        <a href="#" target="_blank">wire frame / prototype<img src="" alt=""></a>
+                                        <a href="#" target="_blank">original site<img src="" alt=""></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="swiper-slide slide3">
+                                <div class="left">
+                                    <div class="thumnail"><img src="" alt=""></div>
+                                </div>
+                                <div class="right">
+                                    <div class="title">
+                                        <h3>나무엑터스</h3>
+                                        <p>반응형 구현</p>
+                                    </div>
+                                    <div class="program">
+                                        <span>Figma</span>
+                                        <span>HTML</span>
+                                        <span>CSS 3</span>
+                                        <span>Javascript</span>
+                                    </div>
+                                    <div class="period">
+                                        <div class="left">
+                                            <p>작업기간</p>
+                                            <p>작업페이지</p>
+                                        </div>
+                                        <div class="right">
+                                            <p>2days</p>
+                                            <p>메인페이지</p>
+                                        </div>
+                                    </div>
+                                    <div class="site">
+                                        <a href="#" target="_blank">re design site<img src="" alt=""></a>
+                                        <a href="#" target="_blank">wire frame / prototype<img src="" alt=""></a>
+                                        <a href="#" target="_blank">original site<img src="" alt=""></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-button-prev"></div>
+                    <div class="swiper-button-next"></div>
+                </div>
+            </div>
+            <div class="swiper-slide slide" id="design">
+                <h2>Design</h2>
+                <div class="container">
+                    <div class="swiper" id="bnr_swiper">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide slide1"><img src="" alt=""></div>
+                            <div class="swiper-slide slide2"><img src="" alt=""></div>
+                            <div class="swiper-slide slide3"><img src="" alt=""></div>
+                            <div class="swiper-slide slide4"><img src="" alt=""></div>
+                        </div>
+                    </div>
+                    <div class="swiper" id="small_swiper">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide slide1"><img src="" alt=""></div>
+                            <div class="swiper-slide slide2"><img src="" alt=""></div>
+                            <div class="swiper-slide slide3"><img src="" alt=""></div>
+                            <div class="swiper-slide slide4"><img src="" alt=""></div>
+                        </div>
+                    </div>
+                    <div class="swiper" id="detail_swiper">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide slide1"><img src="" alt=""></div>
+                            <div class="swiper-slide slide2"><img src="" alt=""></div>
+                            <div class="swiper-slide slide3"><img src="" alt=""></div>
+                            <div class="swiper-slide slide4"><img src="" alt=""></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="swiper-slide slide" id="end">
+                <p>끊임없이 노력하고 진화하는<br><em>웹퍼블리셔 권다은</em>이었습니다.</p>
+                <p>감사합니다!</p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
