자바스크립트 작성

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </header>
     <div class="swiper" id="wrap">
         <!--필수-->
-        <div class="swiper-wrapper">
+        <div class="swiper-wrapper swiper_wrapper">
             <div class="swiper-slide slide" id="home">
                 <P>Da eun Kwon</P>
                 <p class="job job1">WebPublisher</p>
@@ -41,7 +41,7 @@
                 <h2>about me</h2>
                 <div class="about_me_left">
                     <p>끊임없이 노력하고 진화하는<br><em>웹퍼블리셔 권다은</em> 입니다.</p>
-                    <img src="./images/sprout002.png" alt="">
+                    <img src="./images/sprout_ani.gif" alt="">
                     <div class="profile">
                         <h3>Profile</h3>
                         <div class="name">
@@ -56,7 +56,7 @@
                             <dt>phone</dt>
                             <dd>010-2385-4899</dd>
                             <dt>gitHub</dt>
-                            <dd>https://github.com/podo529</dd>
+                            <dd><a href="https://github.com/podo529" target="_blank">https://github.com/podo529</a></dd>
                         </dl>
                     </div>
                     <div class="education">
@@ -122,7 +122,7 @@
                     <div class="swiper" id="project_swiper">
                         <div class="swiper-wrapper">
                             <div class="swiper-slide slide">
-                                <div class="left">
+                                <div class="slide_left">
                                     <div class="thumnail"><img src="" alt=""></div>
                                 </div>
                                 <div class="right">
@@ -137,24 +137,24 @@
                                         <span>Javascript</span>
                                     </div>
                                     <div class="period">
-                                        <div class="left">
+                                        <div class="period_left">
                                             <p>작업기간</p>
                                             <p>작업페이지</p>
                                         </div>
-                                        <div class="right">
+                                        <div class="period_right">
                                             <p>2days</p>
                                             <p>메인페이지</p>
                                         </div>
                                     </div>
                                     <div class="site">
-                                        <a href="#" target="_blank">re design site<img src="" alt=""></a>
-                                        <a href="#" target="_blank">wire frame / prototype<img src="" alt=""></a>
-                                        <a href="#" target="_blank">original site<img src="" alt=""></a>
+                                        <a href="#" target="_blank">re design site<img src="./images/site.png" alt="사이트 이동"></a><br>
+                                        <a href="#" target="_blank">wire frame / prototype<img src="./images/site.png" alt="사이트 이동"></a><br>
+                                        <a href="#" target="_blank">original site<img src="./images/site.png" alt="사이트 이동"></a><br>
                                     </div>
                                 </div>
                             </div>
                             <div class="swiper-slide slide">
-                                <div class="left">
+                                <div class="slide_left">
                                     <div class="thumnail"><img src="" alt=""></div>
                                 </div>
                                 <div class="right">
@@ -169,24 +169,24 @@
                                         <span>Javascript</span>
                                     </div>
                                     <div class="period">
-                                        <div class="left">
+                                        <div class="period_left">
                                             <p>작업기간</p>
                                             <p>작업페이지</p>
                                         </div>
-                                        <div class="right">
+                                        <div class="period_right">
                                             <p>2days</p>
                                             <p>메인페이지</p>
                                         </div>
                                     </div>
                                     <div class="site">
-                                        <a href="#" target="_blank">re design site<img src="" alt=""></a>
-                                        <a href="#" target="_blank">wire frame / prototype<img src="" alt=""></a>
-                                        <a href="#" target="_blank">original site<img src="" alt=""></a>
+                                        <a href="#" target="_blank">re design site<img src="./images/site.png" alt="사이트 이동"></a><br>
+                                        <a href="#" target="_blank">wire frame / prototype<img src="./images/site.png" alt="사이트 이동"></a><br>
+                                        <a href="#" target="_blank">original site<img src="./images/site.png" alt="사이트 이동"></a>
                                     </div>
                                 </div>
                             </div>
                             <div class="swiper-slide slide">
-                                <div class="left">
+                                <div class="slide_left">
                                     <div class="thumnail"><img src="" alt=""></div>
                                 </div>
                                 <div class="right">
@@ -201,53 +201,57 @@
                                         <span>Javascript</span>
                                     </div>
                                     <div class="period">
-                                        <div class="left">
+                                        <div class="period_left">
                                             <p>작업기간</p>
                                             <p>작업페이지</p>
                                         </div>
-                                        <div class="right">
+                                        <div class="period_right">
                                             <p>2days</p>
                                             <p>메인페이지</p>
                                         </div>
                                     </div>
                                     <div class="site">
-                                        <a href="#" target="_blank">re design site<img src="" alt=""></a>
-                                        <a href="#" target="_blank">wire frame / prototype<img src="" alt=""></a>
-                                        <a href="#" target="_blank">original site<img src="" alt=""></a>
+                                        <a href="#" target="_blank">re design site<img src="./images/site.png" alt="사이트 이동"></a><br>
+                                        <a href="#" target="_blank">wire frame / prototype<img src="./images/site.png" alt="사이트 이동"></a><br>
+                                        <a href="#" target="_blank">original site<img src="./images/site.png" alt="사이트 이동"></a>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="swiper-button-prev swiper_btn"></div>
-                    <div class="swiper-button-next swiper_btn"></div>
+                    <img src="./images/prev.png" class="swiper-button-prev swiper_btn prev_btn" alt="">
+                    <img src="./images/next.png" class="swiper-button-next swiper_btn next_btn" alt="">
                 </div>
             </div>
             <div class="swiper-slide slide" id="design">
                 <h2>Design</h2>
                 <div class="container">
-                    <div class="swiper" id="bnr_swiper">
-                        <div class="swiper-wrapper bnr_swiper_wrapper">
-                            <div class="swiper-slide slide"><img src="" alt=""></div>
-                            <div class="swiper-slide slide"><img src="" alt=""></div>
-                            <div class="swiper-slide slide"><img src="" alt=""></div>
-                            <div class="swiper-slide slide"><img src="" alt=""></div>
+                    <div class="container_left">
+                        <div class="swiper" id="bnr_swiper">
+                            <div class="swiper-wrapper bnr_swiper_wrapper">
+                                <div class="swiper-slide slide"><img src="./images/design_bnr_001.jpg" alt=""></div>
+                                <div class="swiper-slide slide"><img src="./images/design_bnr_002.jpg" alt=""></div>
+                                <div class="swiper-slide slide"><img src="./images/design_bnr_003.jpg" alt=""></div>
+                                <div class="swiper-slide slide"><img src="./images/design_bnr_004.jpg" alt=""></div>
+                            </div>
+                        </div>
+                        <div class="swiper" id="long_swiper">
+                            <div class="swiper-wrapper long_swiper_wrapper">
+                                <div class="swiper-slide slide"><img src="./images/design_long_001.jpg" alt=""></div>
+                                <div class="swiper-slide slide"><img src="./images/design_long_001.jpg" alt=""></div>
+                                <div class="swiper-slide slide"><img src="./images/design_long_001.jpg" alt=""></div>
+                                <div class="swiper-slide slide"><img src="./images/design_long_001.jpg" alt=""></div>
+                                <div class="swiper-slide slide"><img src="./images/design_long_001.jpg" alt=""></div>
+                            </div>
                         </div>
                     </div>
-                    <div class="swiper" id="small_swiper">
-                        <div class="swiper-wrapper bnr_swiper_wrapper">
-                            <div class="swiper-slide slide"><img src="" alt=""></div>
-                            <div class="swiper-slide slide"><img src="" alt=""></div>
-                            <div class="swiper-slide slide"><img src="" alt=""></div>
-                            <div class="swiper-slide slide"><img src="" alt=""></div>
-                        </div>
-                    </div>
-                    <div class="swiper" id="detail_swiper">
-                        <div class="swiper-wrapper bnr_swiper_wrapper">
-                            <div class="swiper-slide slide"><img src="" alt=""></div>
-                            <div class="swiper-slide slide"><img src="" alt=""></div>
-                            <div class="swiper-slide slide"><img src="" alt=""></div>
-                            <div class="swiper-slide slide"><img src="" alt=""></div>
+                    <div class="container_right">
+                        <div class="swiper" id="detail_swiper">
+                            <div class="swiper-wrapper detail_swiper_wrapper">
+                                <div class="swiper-slide slide"><img src="./images/design_detail_001.jpg" alt=""></div>
+                                <div class="swiper-slide slide"><img src="./images/design_detail_001.jpg" alt=""></div>
+                                <div class="swiper-slide slide"><img src="./images/design_detail_001.jpg" alt=""></div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -255,7 +259,14 @@
             <div class="swiper-slide slide" id="end">
                 <p>끊임없이 노력하고 진화하는<br><em>웹퍼블리셔 권다은</em>이었습니다.</p>
                 <p>감사합니다!</p>
+                <img src="./images/sprout_ani.gif" alt="">
             </div>
+        </div>
+    </div>
+    <!-- 디자인 프로젝트 실행 팝업 -->
+    <div class="popup_bg">
+        <div class="popup">
+            <img src="./images/design_bnr_001.jpg" alt="">
         </div>
     </div>
 </body>
