css, 안다르 링크 수정

--- a/index.html
+++ b/index.html
@@ -29,13 +29,16 @@
         <!--필수-->
         <div class="swiper-wrapper swiper_wrapper">
             <div class="swiper-slide slide" id="home">
-                <P>Da eun Kwon</P>
-                <p class="job job1">WebPublisher</p>
-                <p class="job job2">WebDeblisher</p>
-                <img src="./images/sprout001.png" alt="">
-                <h1>PORTFOLIO</h1>
-                <p class="ani">PORTFOLIO</p>
-                <p>2025</p>
+                <P class="name">Da eun Kwon</P>
+                <div id="portfolio">
+                    <div class="job">
+                        <p>WebPublisher</p>
+                        <p>WebDeblisher</p>
+                    </div>
+                    <h1>PORTFOLIO<img src="./images/sprout001.png" alt=""></h1>
+                    <p class="ani">PORTFOLIO</p>
+                </div>
+                <p class="year">2025</p>
             </div>
             <div class="swiper-slide slide" id="about_me">
                 <h2>about me</h2>
@@ -123,7 +126,7 @@
                         <div class="swiper-wrapper">
                             <div class="swiper-slide slide">
                                 <div class="slide_left">
-                                    <div class="thumnail"><img src="" alt=""></div>
+                                    <div class="thumnail"><img src="./images/andar.png" alt=""></div>
                                 </div>
                                 <div class="right">
                                     <div class="title">
@@ -147,9 +150,9 @@
                                         </div>
                                     </div>
                                     <div class="site">
-                                        <a href="#" target="_blank">re design site<img src="./images/site.png" alt="사이트 이동"></a><br>
-                                        <a href="#" target="_blank">wire frame / prototype<img src="./images/site.png" alt="사이트 이동"></a><br>
-                                        <a href="#" target="_blank">original site<img src="./images/site.png" alt="사이트 이동"></a><br>
+                                        <a href="podo529.github.io/andar/" target="_blank">re design site<img src="./images/site.png" alt="사이트 이동"></a><br>
+                                        <a href="https://www.figma.com/design/W4HLpwZ228pPDvB6RSX1Y4/%EC%95%88%EB%8B%A4%EB%A5%B4-%EB%A6%AC%EB%94%94%EC%9E%90%EC%9D%B8?node-id=0-1&t=dy3blbo4BK2y8ptI-1" target="_blank">wire frame / prototype<img src="./images/site.png" alt="사이트 이동"></a><br>
+                                        <a href="https://andar.co.kr/" target="_blank">original site<img src="./images/site.png" alt="사이트 이동"></a><br>
                                     </div>
                                 </div>
                             </div>
@@ -257,8 +260,10 @@
                 </div>
             </div>
             <div class="swiper-slide slide" id="end">
-                <p>끊임없이 노력하고 진화하는<br><em>웹퍼블리셔 권다은</em>이었습니다.</p>
+                <div class="end_text">
+                    <p>끊임없이 노력하고 진화하는<br><em>웹퍼블리셔 권다은</em>이었습니다.</p>
                 <p>감사합니다!</p>
+                </div>
                 <img src="./images/sprout_ani.gif" alt="">
             </div>
         </div>
