--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                                         </div>
                                     </div>
                                     <div class="site">
-                                        <a href="podo529.github.io/andar/" target="_blank">re design site<img src="./images/site.png" alt="사이트 이동"></a><br>
+                                        <a href="https://podo529.github.io/andar/" target="_blank">re design site<img src="./images/site.png" alt="사이트 이동"></a><br>
                                         <a href="https://www.figma.com/design/W4HLpwZ228pPDvB6RSX1Y4/%EC%95%88%EB%8B%A4%EB%A5%B4-%EB%A6%AC%EB%94%94%EC%9E%90%EC%9D%B8?node-id=0-1&t=dy3blbo4BK2y8ptI-1" target="_blank">wire frame / prototype<img src="./images/site.png" alt="사이트 이동"></a><br>
                                         <a href="https://andar.co.kr/" target="_blank">original site<img src="./images/site.png" alt="사이트 이동"></a><br>
                                     </div>
