이미지 추가

--- a/index.html
+++ b/index.html
@@ -158,12 +158,12 @@
                             </div>
                             <div class="swiper-slide slide">
                                 <div class="slide_left">
-                                    <div class="thumnail"><img src="" alt=""></div>
+                                    <div class="thumnail"><img src="./images/kortek.png" alt=""></div>
                                 </div>
                                 <div class="right">
                                     <div class="title">
                                         <h3>코텍</h3>
-                                        <p>반응형 구현</p>
+                                        <p><!-- 반응형 구현 --></p>
                                     </div>
                                     <div class="program">
                                         <span>Figma</span>
@@ -184,13 +184,13 @@
                                     <div class="site">
                                         <a href="https://podo529.github.io/kortek/" target="_blank">re design site<img src="./images/site.png" alt="사이트 이동"></a><br>
                                         <a href="https://www.figma.com/proto/4Ld6ogdPljbS18d9EAoV9E/%EC%BD%94%ED%85%8D?node-id=23-84&p=f&t=ya8N77fpzCnTQupc-1&scaling=min-zoom&content-scaling=fixed&page-id=23%3A83" target="_blank">wire frame / prototype<img src="./images/site.png" alt="사이트 이동"></a><br>
-                                        <a href="https://www.kortek.co.kr/" target="_blank">original site<img src="./images/site.png" alt="사이트 이동"></a>
+                                        <a href="http://www.kortek.co.kr" target="_blank">original site<img src="./images/site.png" alt="사이트 이동"></a>
                                     </div>
                                 </div>
                             </div>
                             <div class="swiper-slide slide">
                                 <div class="slide_left">
-                                    <div class="thumnail"><img src="" alt=""></div>
+                                    <div class="thumnail"><img src="./images/namoo_actors.png" alt=""></div>
                                 </div>
                                 <div class="right">
                                     <div class="title">
@@ -240,10 +240,13 @@
                         <div class="swiper" id="long_swiper">
                             <div class="swiper-wrapper long_swiper_wrapper">
                                 <div class="swiper-slide slide"><img src="./images/design_long_001.jpg" alt=""></div>
+                                <div class="swiper-slide slide"><img src="./images/design_long_002.jpg" alt=""></div>
+                                <div class="swiper-slide slide"><img src="./images/design_long_003.jpg" alt=""></div>
+                                <div class="swiper-slide slide"><img src="./images/design_long_004.jpg" alt=""></div>
                                 <div class="swiper-slide slide"><img src="./images/design_long_001.jpg" alt=""></div>
-                                <div class="swiper-slide slide"><img src="./images/design_long_001.jpg" alt=""></div>
-                                <div class="swiper-slide slide"><img src="./images/design_long_001.jpg" alt=""></div>
-                                <div class="swiper-slide slide"><img src="./images/design_long_001.jpg" alt=""></div>
+                                <div class="swiper-slide slide"><img src="./images/design_long_002.jpg" alt=""></div>
+                                <div class="swiper-slide slide"><img src="./images/design_long_003.jpg" alt=""></div>
+                                <div class="swiper-slide slide"><img src="./images/design_long_004.jpg" alt=""></div>
                             </div>
                         </div>
                     </div>
