--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                                             <p>작업페이지</p>
                                         </div>
                                         <div class="period_right">
-                                            <p>2days~</p>
+                                            <p>2days</p>
                                             <p>메인페이지</p>
                                         </div>
                                     </div>
