--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
                                         </div>
                                     </div>
                                     <div class="site">
-                                        <a href="https://podo529.github.io/andar/" target="_blank">re design site (prototype)<img src="./images/site.png" alt="사이트 이동"></a><br>
-                                        <a href="https://www.figma.com/proto/ewbATa9qIejDEAxWKwuRsq/%EC%95%88%EB%8B%A4%EB%A5%B4-%EA%B8%B0%ED%9A%8D%EC%84%9C?node-id=1-27&p=f&t=LAomUR06U1r7maV6-1&scaling=contain&content-scaling=fixed&page-id=0%3A1" target="_blank">wire frame / Plan<img src="./images/site.png" alt="사이트 이동"></a><br>
+                                        <a href="https://podo529.github.io/andar/" target="_blank">re design site<img src="./images/site.png" alt="사이트 이동"></a><br>
+                                        <a href="https://www.figma.com/proto/W4HLpwZ228pPDvB6RSX1Y4/%EC%95%88%EB%8B%A4%EB%A5%B4-%EB%A6%AC%EB%94%94%EC%9E%90%EC%9D%B8?node-id=12-2&p=f&t=rVcQxdbu0KyjEtHJ-1&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1" target="_blank">wire frame / prototype<img src="./images/site.png" alt="사이트 이동"></a><br>
                                         <a href="https://andar.co.kr/" target="_blank">original site<img src="./images/site.png" alt="사이트 이동"></a><br>
                                     </div>
                                 </div>
@@ -170,6 +170,7 @@
                                         <span>HTML</span>
                                         <span>CSS 3</span>
                                         <span>Javascript</span>
+                                        <span>Photoshop</span>
                                     </div>
                                     <div class="period">
                                         <div class="period_left">
@@ -183,7 +184,7 @@
                                     </div>
                                     <div class="site">
                                         <a href="https://podo529.github.io/kortek/" target="_blank">re design site<img src="./images/site.png" alt="사이트 이동"></a><br>
-                                        <a href="https://www.figma.com/proto/4Ld6ogdPljbS18d9EAoV9E/%EC%BD%94%ED%85%8D?node-id=23-84&p=f&t=ya8N77fpzCnTQupc-1&scaling=min-zoom&content-scaling=fixed&page-id=23%3A83" target="_blank">wire frame / prototype<img src="./images/site.png" alt="사이트 이동"></a><br>
+                                        <a href="https://www.figma.com/proto/4Ld6ogdPljbS18d9EAoV9E/%EC%BD%94%ED%85%8D?node-id=162-2&t=6eHrcdjSTq5S4B3L-1&scaling=min-zoom&content-scaling=fixed&page-id=23%3A83" target="_blank">wire frame / prototype<img src="./images/site.png" alt="사이트 이동"></a><br>
                                         <a href="http://www.kortek.co.kr" target="_blank">original site<img src="./images/site.png" alt="사이트 이동"></a>
                                     </div>
                                 </div>
@@ -201,6 +202,7 @@
                                         <span>HTML</span>
                                         <span>CSS 3</span>
                                         <span>Javascript</span>
+                                        <span>Photoshop</span>
                                     </div>
                                     <div class="period">
                                         <div class="period_left">
@@ -214,7 +216,7 @@
                                     </div>
                                     <div class="site">
                                         <a href="https://podo529.github.io/namooactors/" target="_blank">re design site<img src="./images/site.png" alt="사이트 이동"></a><br>
-                                        <a href="https://www.figma.com/proto/TabMfWEKoR76IItwaufAEI/%EB%82%98%EB%AC%B4%EC%97%91%ED%84%B0%EC%8A%A4-%EB%A6%AC%EB%94%94%EC%9E%90%EC%9D%B8?node-id=0-5&p=f&t=s8IDZOZwGci6YxjH-1&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1" target="_blank">wire frame / prototype<img src="./images/site.png" alt="사이트 이동"></a><br>
+                                        <a href="https://www.figma.com/proto/TabMfWEKoR76IItwaufAEI/%EB%82%98%EB%AC%B4%EC%97%91%ED%84%B0%EC%8A%A4-%EB%A6%AC%EB%94%94%EC%9E%90%EC%9D%B8?node-id=12-2&t=KCrQvjYlXFwuCMSU-1&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1" target="_blank">wire frame / prototype<img src="./images/site.png" alt="사이트 이동"></a><br>
                                         <a href="http://namooactors.com/" target="_blank">original site<img src="./images/site.png" alt="사이트 이동"></a>
                                     </div>
                                 </div>
@@ -235,6 +237,7 @@
                                 <div class="swiper-slide slide"><img src="./images/design_bnr_002.jpg" alt=""></div>
                                 <div class="swiper-slide slide"><img src="./images/design_bnr_003.jpg" alt=""></div>
                                 <div class="swiper-slide slide"><img src="./images/design_bnr_004.jpg" alt=""></div>
+                                <div class="swiper-slide slide"><img src="./images/design_bnr_005.jpg" alt=""></div>
                             </div>
                         </div>
                         <div class="swiper" id="long_swiper">
