마켓컬리 추가

--- a/index.html
+++ b/index.html
@@ -221,6 +221,34 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="swiper-slide slide">
+                                <div class="slide_left">
+                                    <div class="thumnail"><img src="./images/kurly.png" alt=""></div>
+                                </div>
+                                <div class="right">
+                                    <div class="title">
+                                        <h3>마켓컬리</h3>
+                                    </div>
+                                    <div class="program">
+                                        <span>Figma</span>
+                                        <span>Photoshop</span>
+                                    </div>
+                                    <div class="period">
+                                        <div class="period_left">
+                                            <p>작업기간</p>
+                                            <p>작업페이지</p>
+                                        </div>
+                                        <div class="period_right">
+                                            <p>1days</p>
+                                            <p>메인페이지</p>
+                                        </div>
+                                    </div>
+                                    <div class="site">
+                                        <a href="https://www.figma.com/proto/zIXiVr89PD9WSvcWWz0bKn/%EB%A7%88%EC%BC%93%EC%BB%AC%EB%A6%AC?node-id=212-72&p=f&t=z37LdO1rl5EhKUli-1&scaling=min-zoom&content-scaling=fixed&page-id=68%3A9" target="_blank">wire frame / prototype<img src="./images/site.png" alt="사이트 이동"></a><br>
+                                        <a href="https://www.kurly.com/main" target="_blank">original site<img src="./images/site.png" alt="사이트 이동"></a>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <img src="./images/prev.png" class="swiper-button-prev swiper_btn prev_btn" alt="">
