작업물 추가

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <!--플러그인 필수 JS cdn 연결-->
     <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <link rel="shortcut icon" href="./images/sprout002.png" type="image/x-icon">
+    <link rel="icon" href="./images/sprout002.png" type="image/x-icon">
     <link rel="stylesheet" href="./styles/reset.css">
     <link rel="stylesheet" href="./styles/index.css">
     <script src="./scripts/index.js" defer></script>
@@ -163,7 +165,7 @@
                                 <div class="right">
                                     <div class="title">
                                         <h3>코텍</h3>
-                                        <p><!-- 반응형 구현 --></p>
+                                        <p>반응형 구현</p>
                                     </div>
                                     <div class="program">
                                         <span>Figma</span>
@@ -178,7 +180,7 @@
                                             <p>작업페이지</p>
                                         </div>
                                         <div class="period_right">
-                                            <p>2days</p>
+                                            <p>4days</p>
                                             <p>메인페이지</p>
                                         </div>
                                     </div>
@@ -285,8 +287,9 @@
                         <div class="swiper" id="detail_swiper">
                             <div class="swiper-wrapper detail_swiper_wrapper">
                                 <div class="swiper-slide slide"><img src="./images/design_detail_001.jpg" alt=""></div>
+                                <div class="swiper-slide slide"><img src="./images/design_detail_002.jpg" alt=""></div>
                                 <div class="swiper-slide slide"><img src="./images/design_detail_001.jpg" alt=""></div>
-                                <div class="swiper-slide slide"><img src="./images/design_detail_001.jpg" alt=""></div>
+                                <div class="swiper-slide slide"><img src="./images/design_detail_002.jpg" alt=""></div>
                             </div>
                         </div>
                     </div>
